# glue_test

./: CMakeLists.txt  README.md  compile_gluetest.sh  exec_glue.sh  gluetest.cproj  main.cpp  main.d
include/: files.h  graph.h  graph_manager.h  random_gen.h
scripts/: get_libglue.sh
